pubrush-k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubrush-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pubrush-backend
  template:
    metadata:
      labels:
        app: pubrush-backend
    spec:
      containers:
      - name: backend
        image: baptistebriziou/pubrush-backend:latest
        command: ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port 8000"]
        ports:
        - containerPort: 8000
        env: *backend-env
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service # C'est le nom exact attendu par ton fichier ingress.yaml
spec:
  selector:
    app: pubrush-backend # Dit au service de cibler ton conteneur FastAPI
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
