pubrush-k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubrush-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pubrush-db
  template:
    metadata:
      labels:
        app: pubrush-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command: ["sh", "-c", "pg_isready -U pubrush -d pubrush"]
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-storage
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db # <-- C'est ce nom qui sera résolu par le backend
spec:
  selector:
    app: pubrush-db # Oriente le trafic vers le pod de la BDD
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
